--- a/wordFallLogic/pom.xml
+++ b/wordFallLogic/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>wordFallLogic</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.github.dhiraj072</groupId>
+            <artifactId>random-word-generator</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
