--- a/wordFallLogic/pom.xml
+++ b/wordFallLogic/pom.xml
@@ -9,12 +9,28 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <junit-jupiter-api.version>5.3.2</junit-jupiter-api.version>
+    </properties>
+
     <artifactId>wordFallLogic</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.github.dhiraj072</groupId>
             <artifactId>random-word-generator</artifactId>
             <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter-api.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
